# zbun

./: .gitignore  LICENSE  README.md  main.py  playground.ipynb  pyproject.toml  zbun.py
bundle_template/: copier.yml  {{bundle_name}}.py.jinja
bundle_template/{{bundle_name}}/: dataprep.py.jinja  zbundle.yaml.jinja
bundle_template/{{bundle_name}}/data/: A.csv  AABA.csv  (+563 more)
mamastocks/: .copier-answers.yml  dataprep.py  zbundle.yaml
mamastocks/data/: AAMRQ-201312.csv  ABT.csv  ADP.csv  AJG.csv  AKS.csv  ALL.csv  ANDV.csv  BA.csv  BAC-199809.csv  BMS.csv  BOL-200710.csv  CA.csv  CAT.csv  CB-201601.csv  CBRE.csv  CELG.csv  CHD.csv  CHRW.csv  CIN-200603.csv  CITGQ-200912.csv  CNXT-201104.csv  CSX.csv  CTAS.csv  CXO.csv  CYM-199912.csv  DDS.csv  DGX.csv  DIS.csv  DISH.csv  DRI.csv  DWD-199705.csv  EQT.csv  ESV.csv  ETS-200603.csv  FAST.csv  FITB.csv  FLR.csv  FOXA.csv  FRT.csv  GRN-199812.csv  (+73 more)
new_bundle/: .copier-answers.yml  nas.py  nasdaq.py
rstocks/: .copier-answers.yml  dataprep.py  zbundle.yaml
rstocks/data/: ADI.csv  AEP.csv  AET.csv  AMH-199709.csv  ANSS.csv  APCC-200702.csv  AR-199911.csv  AS-199909.csv  ATGE.csv  AV-200710.csv  AVY.csv  BC.csv  BCR-201712.csv  BIIB.csv  BKB-199909.csv  BUD-200811.csv  CBE-201211.csv  CBH-200803.csv  CERN.csv  CFG.csv  CL.csv  COP.csv  CPRT.csv  CVC-201606.csv  DCNAQ-200801.csv  DG-200707.csv  DTE.csv  DTV-201507.csv  DVN.csv  EMN.csv  EQ-200906.csv  FDX.csv  FLS.csv  FMC.csv  FMCC.csv  FMY-199905.csv  FNMA.csv  FRC.csv  GAS-201112.csv  GE.csv  (+70 more)
stocks2/: .copier-answers.yml  stocks2.py  zbun.yaml
zbundler/: pyvenv.cfg
(+337 files in other folders)
